fix: 使用el-scrollbar监听滚动失效问题

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,17 @@
 * {
   box-sizing: border-box;
   padding: 0;
+  margin: 0;
   text-decoration: none;
   transition: box-shadow ease 0.2s;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  margin: 0;
+  height: 100%;
 }
 
 /* 以动态添加类的方式切换主题颜色 */
